# tetrisduel

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
src/: error.rs  event_regulator.rs  lru_storage.rs  main.rs  match_finder.rs  matches.rs  tetris.rs  tetris_pair.rs  tetris_pair_match.rs
static/: sse.html
static/tetris/: client.html
static/tetris/css/: tetris.css
static/tetris/js/: tetris_client.js
templates/admin/: index.html.hbs  players.html.hbs
