[package]
name = "gameserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# linked-hash-map for lru game state storage
linked-hash-map = "0.5.6"
# rocket library dependency
rocket = { version = "0.5.0-rc.3", features = ["tls", "json"] }
# rand library dependency
rand = "0.8.4"
# persy library dependency
persy = "1.4.4"
# serde library dependency
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]
